--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -1,12 +1,19 @@
-project(subbinary)
+project(demo)
+
+
+set (LIB_PATH ${CMAKE_SOURCE_DIR}/../build/)
+
 
 # Create the executable
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_NAME} logging_test.cpp)
 
 # Link the static library from subproject1 using it's alias sub::lib1
 # Link the header only library from subproject2 using it's alias sub::lib2
 # This will cause the include directories for that target to be added to this project
 target_link_libraries(${PROJECT_NAME}
-    sub::lib1
-    sub::lib2
+	${LIB_PATH}/librtc_base
+)
+
+target_include_directories( ${PROJECT_NAME}
+	    PUBLIC ${PROJECT_SOURCE_DIR}/../webrtc/
 )
